--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,4 +1,25 @@
-.grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
+.nav {
+    display: block;
+    position: fixed;
+    background: navy;
+    width: 100vw;
+    top: 0;
+}
+
+.nav img {
+    position: relative;
+    left: 10em;
+    width: 3em;
+    height: 3em;
+}
+
+.navbar {
+    position: absolute;
+    right: 10em;
+    margin: 1em;
+}
+
+.navbar span {
+    margin: 0 1em;
+    color: white;
 }
