Fix cross-platform issue with Card orientation

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,5 +1,5 @@
 .card {
-    display: block;
+    display: grid;
     margin: 1em;
 }
 
@@ -10,8 +10,7 @@
 .card img {
     grid-area: img;
     align-self: center;
-    width: 100%;
-    height: auto;
+    width: 300px;
 }
 
 .card span {
@@ -20,27 +19,25 @@
 }
 
 .horizontal {
-    display: grid;
     grid-template-areas:
         "img h1"
         "img p";
 }
 
 .vertical {
-    display: grid;
     grid-template-areas:
         "h1"
         "img"
         "p";
 }
 
-.border {
-    border-width: 1px;
-    border-style: solid;
-}
-
 .mirror {
     grid-template-areas:
         "h1 img"
         "p img";
+}
+
+.border {
+    border-width: 1px;
+    border-style: solid;
 }
