--- a/src/pages/interactivePage.css
+++ b/src/pages/interactivePage.css
@@ -1,56 +1,80 @@
-li{
+.panel li {
     margin: 0;
     list-style: none;
 }
 
-ul{
+.panel ul {
     padding: 0;
 }
 
-.body1{
-    display: flex;
+.interactive-body {
+    display: grid;
+    grid-template-columns: 300px auto;
+    margin: 0 10%;
 }
 
-
-.cards{
+.cards {
     flex: 80%;
 }
 
 .accordion {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
+    font-size: 20px;
+    font-weight: 700;
+    border-bottom: 1px black solid;
     transition: 0.4s;
-  }
-  
-  .active, .accordion:hover {
+    padding: 18px 8px 8px 8px;
+    width: 100%;
+}
+
+.accordion:hover {
     background-color: #ccc;
-  }
-  
-  .accordion:after {
-    content: '\002B';
+}
+
+.accordion:after {
+    content: "\002B";
     color: #777;
     font-weight: bold;
     float: right;
     margin-left: 5px;
-  }
-  
-  .active:after {
+}
+
+.active:after {
     content: "\2212";
-  }
-  
-  .panel {
+}
+
+.panel {
     padding: 0 18px;
     background-color: white;
-    /*
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.2s ease-out;
-    */
+    transition: max-height 0.2s ease-in-out;
+}
+
+.panel-active {
+    max-height: 100%;
+}
+
+.toggle-container {
+    display: grid;
+    grid-template-columns: 300px 300px auto;
+    margin: 0 10%;
+}
+
+.toggle-option {
+    display: inline-block;
+    font-size: 32px;
+    font-weight: 900;
+    margin: 10px;
+}
+
+.select-container {
+    display: grid;
+    grid-template-columns: 300px 300px auto;
+    margin: 0 10%;
+}
+
+.select-option {
+    display: inline-flex;
+    float: left;
+    margin: 10px;
 }
