--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -10,9 +10,10 @@
 .nav img {
     position: relative;
     left: 10vw;
-    width: 3em;
+    width: 6em;
     height: 3em;
 }
+
 
 .navbar {
     position: absolute;
@@ -32,4 +33,8 @@
 
 .navbar span:active{
     color: #2C7BBF;
+}
+
+img {
+    object-fit: contain;
 }
