--- a/src/components/chip.css
+++ b/src/components/chip.css
@@ -6,8 +6,8 @@
     box-sizing: border-box;
     border: 1px solid black;
     border-radius: 24px;
-    padding: 8px 24px 8px 24px;
-    margin: 8px 8px;
+    padding: 8px 16px;
+    margin-right: 16px;
     width: fit-content;
 }
 
